Fixed issue with Dark Mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -61,6 +61,10 @@ p {
 
 #light {
   background-color: #f4f6f8;
+
+  .jobcard {
+    background-color: #fff;
+  }
   .button2 {
     background-color: #5964e010;
     padding: 16px 40px;
@@ -111,6 +115,12 @@ p {
 
 #dark {
   background-color: #121721;
+  .jobcard {
+    background-color: #19202d;
+    h3 {
+      color: #fff;
+    }
+  }
   .button2 {
     background-color: #ffffff10;
     padding: 16px 40px;
