--- a/src/Components/JobCard/JobCard.scss
+++ b/src/Components/JobCard/JobCard.scss
@@ -5,7 +5,6 @@
 .jobcard {
   width: 325px;
   height: 228px;
-  background-color: #fff;
   margin: 65px 15px 0px 15px;
   border-radius: 6px;
   padding: 49px 32px 32px 32px;
